      than environment) variable.

      \item \code{normalizePath()} has been moved to the \pkg{base} package
      (from \pkg{utils}): this is so it can be used by \code{library()}
      and friends.

      It gains new arguments \code{winslash} (to select the separator on
      Windows) and \code{mustWork} to control the action if a canonical
      path cannot be found.
    }
  }

  \subsection{DEPRECATED & DEFUNCT}{
    \itemize{
      \item \code{require(save = TRUE)} is defunct, and use of the
      \code{save} argument is deprecated.

      \item \command{R CMD check --no-latex} is defunct: use
      \option{--no-manual} instead.

      \item \command{R CMD Sd2Rd} is defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Dummy
    }
  }
}

\section{CHANGES IN R VERSION 2.12.0 PATCHED}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{seq.int} no longer sometimes evaluates arguments
      twice.  (\PR{14388})
    }
  }
}

\section{CHANGES IN R VERSION 2.12.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Reading a packages's \file{CITATION} file now defaults to
       ASCII rather than Latin-1: a package with a non-ASCII
       \file{CITATION} file should declare an encoding in its
       \file{DESCRIPTION} file and use that encoding for the
       \file{CITATION} file.

      \item \code{difftime()} now defaults to the \code{"tzone"}
       attribute of \code{"POSIXlt"} objects rather than to the current
       timezone as set by the default for the \code{tz} argument.  (Wish
       of \PR{14182}.)

      \item \code{pretty()} is now generic, with new methods for
       \code{"Date"} and \code{"POSIXt"} classes (based on code
       contributed by Felix Andrews).

      \item \code{unique()} and \code{match()} are now faster on
       character vectors where all elements are in the global \code{CHARSXP}
       cache and have unmarked encoding (ASCII).  Thanks to Matthew